<?xml version="1.0"?>
<package format="2">
  <name>duro_ros</name>
  <version>0.0.0</version>
  <description>The duro-ros package</description>

  <maintainer email="rokus@ruvu.nl">Rokus Ottervanger</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/duro-ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libsbp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>libsbp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
